fix(soldoutcomp): make visible in ProductDetail

--- a/src/App.sass
+++ b/src/App.sass
@@ -48,6 +48,9 @@
   justify-content: center
   align-items: center
 
+.flex-wrap
+  flex-wrap: wrap
+
 .padding-small
   padding: 1em
 
