--- a/src/components/ProductImage.sass
+++ b/src/components/ProductImage.sass
@@ -11,6 +11,7 @@
   z-index: 12
   align-items: center
   color: white
+  position: relative
 
 .ProductImage__isNew
   position: absolute
